; ModuleID = '/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfs.c_grub_hfs_iterate_dir_it_dir.c'
source_filename = "/home/carl/AnghaBench/radare2/shlr/grub/fs/extr_hfs.c_grub_hfs_iterate_dir_it_dir.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.grub_hfs_node = type { i32 }
%struct.grub_hfs_record = type { %struct.grub_hfs_catalog_key* }
%struct.grub_hfs_catalog_key = type { i32 }
%struct.grub_hfs_iterate_dir_closure = type { i32 (%struct.grub_hfs_record*, i32)*, i32, %struct.grub_hfs_catalog_key* }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.grub_hfs_node*, %struct.grub_hfs_record*, i8*)* @grub_hfs_iterate_dir_it_dir to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @grub_hfs_iterate_dir_it_dir(%struct.grub_hfs_node* %0, %struct.grub_hfs_record* %1, i8* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca %struct.grub_hfs_node*, align 8
  %6 = alloca %struct.grub_hfs_record*, align 8
  %7 = alloca i8*, align 8
  %8 = alloca %struct.grub_hfs_iterate_dir_closure*, align 8
  %9 = alloca %struct.grub_hfs_catalog_key*, align 8
  %10 = alloca %struct.grub_hfs_catalog_key*, align 8
  store %struct.grub_hfs_node* %0, %struct.grub_hfs_node** %5, align 8
  store %struct.grub_hfs_record* %1, %struct.grub_hfs_record** %6, align 8
  store i8* %2, i8** %7, align 8
  %11 = load i8*, i8** %7, align 8
  %12 = bitcast i8* %11 to %struct.grub_hfs_iterate_dir_closure*
  store %struct.grub_hfs_iterate_dir_closure* %12, %struct.grub_hfs_iterate_dir_closure** %8, align 8
  %13 = load %struct.grub_hfs_record*, %struct.grub_hfs_record** %6, align 8
  %14 = getelementptr inbounds %struct.grub_hfs_record, %struct.grub_hfs_record* %13, i32 0, i32 0
  %15 = load %struct.grub_hfs_catalog_key*, %struct.grub_hfs_catalog_key** %14, align 8
  store %struct.grub_hfs_catalog_key* %15, %struct.grub_hfs_catalog_key** %9, align 8
  %16 = load %struct.grub_hfs_iterate_dir_closure*, %struct.grub_hfs_iterate_dir_closure** %8, align 8
  %17 = getelementptr inbounds %struct.grub_hfs_iterate_dir_closure, %struct.grub_hfs_iterate_dir_closure* %16, i32 0, i32 2
  %18 = load %struct.grub_hfs_catalog_key*, %struct.grub_hfs_catalog_key** %17, align 8
  store %struct.grub_hfs_catalog_key* %18, %struct.grub_hfs_catalog_key** %10, align 8
  %19 = load %struct.grub_hfs_catalog_key*, %struct.grub_hfs_catalog_key** %9, align 8
  %20 = getelementptr inbounds %struct.grub_hfs_catalog_key, %struct.grub_hfs_catalog_key* %19, i32 0, i32 0
  %21 = load i32, i32* %20, align 4
  %22 = call i64 @grub_be_to_cpu32(i32 %21)
  %23 = load %struct.grub_hfs_catalog_key*, %struct.grub_hfs_catalog_key** %10, align 8
  %24 = getelementptr inbounds %struct.grub_hfs_catalog_key, %struct.grub_hfs_catalog_key* %23, i32 0, i32 0
  %25 = load i32, i32* %24, align 4
  %26 = call i64 @grub_be_to_cpu32(i32 %25)
  %27 = icmp ne i64 %22, %26
  br i1 %27, label %28, label %29

28:                                               ; preds = %3
  store i32 1, i32* %4, align 4
  br label %38

29:                                               ; preds = %3
  %30 = load %struct.grub_hfs_iterate_dir_closure*, %struct.grub_hfs_iterate_dir_closure** %8, align 8
  %31 = getelementptr inbounds %struct.grub_hfs_iterate_dir_closure, %struct.grub_hfs_iterate_dir_closure* %30, i32 0, i32 0
  %32 = load i32 (%struct.grub_hfs_record*, i32)*, i32 (%struct.grub_hfs_record*, i32)** %31, align 8
  %33 = load %struct.grub_hfs_record*, %struct.grub_hfs_record** %6, align 8
  %34 = load %struct.grub_hfs_iterate_dir_closure*, %struct.grub_hfs_iterate_dir_closure** %8, align 8
  %35 = getelementptr inbounds %struct.grub_hfs_iterate_dir_closure, %struct.grub_hfs_iterate_dir_closure* %34, i32 0, i32 1
  %36 = load i32, i32* %35, align 8
  %37 = call i32 %32(%struct.grub_hfs_record* %33, i32 %36)
  store i32 %37, i32* %4, align 4
  br label %38

38:                                               ; preds = %29, %28
  %39 = load i32, i32* %4, align 4
  ret i32 %39
}

declare dso_local i64 @grub_be_to_cpu32(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
